# pyquidax

./: README.md  pyproject.toml
pyquidax/: base.py  exceptions.py  quidax.py  utils.py
pyquidax/clients/: accounts.py  beneficiary.py  deposits.py  instant_orders.py  markets.py  orders.py  trades.py  wallets.py  withdrawals.py
pyquidax/wrappers/: accounts.py  beneficiary.py  deposits.py  instant_orders.py  markets.py  orders.py  trades.py  wallets.py  withdrawals.py
tests/: mocked_api_call_testcase.py  test_base.py  test_quidax.py  utils.py
tests/test_clients/: test_accounts.py  test_beneficiary.py  test_deposits.py  test_instant_orders.py  test_markets.py  test_orders.py  test_trades.py  test_wallets.py  test_withdrawals.py
